[gd_scene load_steps=20 format=2]

[ext_resource path="res://ATM Bank Queue/images/pngwing.com (11).png" type="Texture" id=1]
[ext_resource path="res://ATM Bank Queue/scenes/person/Person.gd" type="Script" id=2]
[ext_resource path="res://ATM Bank Queue/images/pngwing.com (13).png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 60, 106.5 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 4, 98, 284 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 172, 4, 156, 271 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 383, 10, 151, 260 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 567, 0, 162, 279 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 26, 314, 83, 267 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 224, 315, 77, 265 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 427, 312, 86, 271 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 621, 287, 70, 274 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 169, 75, 431, 524 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 732, 106, 361, 493 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 150, 768, 455, 432 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 797, 731, 403, 469 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 169, 75, 431, 524 )

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite4:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite5:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite6:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "on_atm"
length = 5.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.1, 1.4, 1.9, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite4:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2.2, 2.5, 3, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite5:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 3.3, 3.6, 4.1, 4.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite6:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 4.4, 4.7, 5.2, 5.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Person" type="KinematicBody2D" groups=["Person"]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 30, 31.5 )
shape = SubResource( 2 )

[node name="random_sprite" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="random_sprite"]
visible = false
texture = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="random_sprite"]
visible = false
texture = SubResource( 10 )

[node name="Sprite3" type="Sprite" parent="random_sprite"]
texture = SubResource( 11 )

[node name="Sprite4" type="Sprite" parent="random_sprite"]
visible = false
texture = SubResource( 12 )

[node name="Sprite5" type="Sprite" parent="random_sprite"]
visible = false
texture = SubResource( 13 )

[node name="Sprite6" type="Sprite" parent="random_sprite"]
visible = false
texture = SubResource( 14 )

[node name="Sprite7" type="Sprite" parent="random_sprite"]
visible = false
texture = SubResource( 15 )

[node name="Sprite8" type="Sprite" parent="random_sprite"]
visible = false
scale = Vector2( -1, 1 )
texture = SubResource( 16 )

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -224 )
scale = Vector2( 0.3, 0.3 )
texture = SubResource( 3 )

[node name="Sprite3" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -224 )
scale = Vector2( 0.3, 0.3 )
texture = SubResource( 4 )

[node name="Sprite4" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -224 )
scale = Vector2( 0.3, 0.3 )
texture = SubResource( 5 )

[node name="Sprite5" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -224 )
scale = Vector2( 0.3, 0.3 )
texture = SubResource( 6 )

[node name="Sprite6" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -224 )
scale = Vector2( 0.3, 0.3 )
texture = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/on_atm = SubResource( 9 )

[node name="on_atm_timer" type="Timer" parent="."]
wait_time = 5.5
one_shot = true

[connection signal="timeout" from="on_atm_timer" to="." method="_on_on_atm_timer_timeout"]
